--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/walletconnect-connector": "^6.2.13",
+    "axios": "^0.27.2",
+    "big-number": "^2.0.0",
     "classnames": "^2.3.1",
     "ethers": "^5.6.5",
     "gh-pages": "^3.2.3",
